integration finale user + fix login